--- a/css/style.css
+++ b/css/style.css
@@ -2327,7 +2327,7 @@ input[type="submit"]:active {
   border-radius: 0 2px 2px 0;
 }
 
-.right .loginwith {
+.rightsignup .loginwith {
   display: block;
 
   margin-bottom: 40px;
