--- a/Back-end/views/_layouts/main.handlebars
+++ b/Back-end/views/_layouts/main.handlebars
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<link rel="icon" href="/imgs/logo.png" type="image/png" size="8x8">
+		<link rel="icon" href="#" type="image/png" size="8x8">
 		<title>{{{_sections.title}}}</title>
 
 		<!-- Google font -->
@@ -62,8 +62,8 @@
 						<!-- LOGO -->
 						<div class="col-md-3">
 							<div class="header-logo">
-								<a href="./index.html" class="logo">
-									<img width = "80%" src="./img/logo.png" alt="">
+								<a href="#" class="logo">
+									<img width = "80%" src="/imgs/logo.png" alt="">
 								</a>
 							</div>
 						</div>
@@ -83,6 +83,7 @@
 										<option value="6">Asus</option>
 										<option value="7">MSI</option>
 										<option value="8">Apple</option>
+										
 									</select>
 									<input class="input" placeholder="Bạn đang tìm sản phẩm nào?">
 									<button class="search-btn">Tìm kiếm</button>
@@ -126,11 +127,47 @@
 		</header>
 		<!-- /HEADER -->
 		
+		
+		<!-- NAVIGATION -->
+		<nav id="navigation">
+			<!-- container -->
+			<div class="container">
+				<!-- responsive-nav -->
+				<div id="responsive-nav">
+					<!-- NAV -->
+					<ul class="main-nav nav navbar-nav">
+						{{{_sections.nav}}}
+
+					</ul>
+					<!-- /NAV -->
+				</div>
+				<!-- /responsive-nav -->
+			</div>
+			<!-- /container -->
+		</nav>
+		<!-- /NAVIGATION -->
+
+		
 		<!-- SECTION -->
 		<div class="section">
 			<!-- container -->
 			<div class="container">
-				{{{body}}}
+				<!-- row -->
+				<div class="row">
+					<!-- ASIDE -->
+					<div id="aside" class="col-md-3">
+						{{{_sections.bodyleft}}}
+					</div>
+					<!-- /ASIDE -->
+
+					<!-- STORE -->
+					<div id="store" class="col-md-9">
+						{{{_sections.bodyright}}}
+					</div>
+					<!-- /STORE -->
+					
+				</div>
+				<!-- /row -->
 			</div>
 			<!-- /container -->
 		</div>
