--- a/Back-end/views/category/byCat.hbs
+++ b/Back-end/views/category/byCat.hbs
@@ -9,7 +9,7 @@
 	
 	<li class="dropdown"><a href="#"><i class="fas fa-bars"></i> Xem theo loại sản phẩm</a>
 		<div class="dropdown-content">
-			{{#each categories}}
+			{{#each layoutVM.categories}}
 			<a href="#">{{CatName}}</a>			
 			{{/each}}
 		</div>
@@ -30,7 +30,7 @@
 	<div class="aside">
 		<h3 class="aside-title">Brand</h3>
 		<div class="checkbox-filter">
-			{{#each categories}}
+			{{#each layoutVM.categories}}
 				<div class="input-checkbox">
 					<input type="checkbox" checked=""  id="brand-1">
 					<label for="brand-1">
@@ -73,7 +73,7 @@
 
 <!-- store products -->
 <div class="row">
-	{{#each layoutVM1.products}}
+	{{#each products}}
 		<!-- product -->
 		<div class="col-md-4 col-xs-6">
 			<a href="#" target="blank">
@@ -85,9 +85,9 @@
 						</div>
 					</div>
 					<div class="product-body">
-						<p class="product-category">Asus</p>
+						<p class="product-category">{{ProduName}}</p>
 						<h3 class="product-name"><a href="#">{{ProName}}</a></h3>
-						<h4 class="product-price">{{Price}} ₫<del class="product-old-price"></del></h4>
+						<h4 class="product-price">32.490.000 ₫<del class="product-old-price"></del></h4>
 						<div class="product-rating">
 							<i class="fa fa-star"></i>
 							<i class="fa fa-star"></i>
@@ -119,12 +119,16 @@
 
 	<!-- store bottom filter -->
 	<div class="store-filter clearfix">
-		<span class="store-qty">Showing 6/10 products</span>
+
 		<ul class="store-pagination">
-			<li class="active">1</li>
-			<li><a href="Laptop_Asus_2.html">2</a></li>
-			<li><a href="#">3</a></li>
-			<li><a href="#">4</a></li>
+		{{#each page_numbers}}
+		{{#if isCurPage}}
+			<li class="active"><a href="javascript:;">{{value}}</a></li>
+		{{else}}
+			<li><a href="?page={{value}}">{{value}}</a></li>
+		{{/if}}
+		{{/each}}
+
 			<li><a href="#"><i class="fa fa-angle-right"></i></a></li>
 		</ul>
 	</div>
