--- a/Back-end/views/producer/byProducer.hbs
+++ b/Back-end/views/producer/byProducer.hbs
@@ -30,7 +30,7 @@
 	<div class="aside">
 		<h3 class="aside-title">Brand</h3>
 		<div class="checkbox-filter">
-			{{#each categories}}
+			{{#each layoutVM.categories}}
 				<div class="input-checkbox">
 					<input type="checkbox" checked=""  id="brand-1">
 					<label for="brand-1">
@@ -85,7 +85,7 @@
 						</div>
 					</div>
 					<div class="product-body">
-						<p class="product-category">Asus</p>
+						<p class="product-category">{{ProduName}}</p>
 						<h3 class="product-name"><a href="#">{{ProName}}</a></h3>
 						<h4 class="product-price">32.490.000 ₫<del class="product-old-price"></del></h4>
 						<div class="product-rating">
@@ -119,12 +119,16 @@
 
 	<!-- store bottom filter -->
 	<div class="store-filter clearfix">
-		<span class="store-qty">Showing 6/10 products</span>
+
 		<ul class="store-pagination">
-			<li class="active">1</li>
-			<li><a href="Laptop_Asus_2.html">2</a></li>
-			<li><a href="#">3</a></li>
-			<li><a href="#">4</a></li>
+		{{#each page_numbers}}
+		{{#if isCurPage}}
+			<li class="active"><a href="javascript:;">{{value}}</a></li>
+		{{else}}
+			<li><a href="?page={{value}}">{{value}}</a></li>
+		{{/if}}
+		{{/each}}
+
 			<li><a href="#"><i class="fa fa-angle-right"></i></a></li>
 		</ul>
 	</div>
