--- a/Back-end/views/_layouts/main.handlebars
+++ b/Back-end/views/_layouts/main.handlebars
@@ -160,6 +160,13 @@
 			<div class="container">
 				<!-- row -->
 				<div class="row">
+
+					{{{_sections.title1}}}
+
+					{{{_sections.title2}}}
+					
+					{{{_sections.title3}}}
+
 					<!-- ASIDE -->
 					<div id="aside" class="col-md-3">
 						{{{_sections.bodyleft}}}
