--- a/Back-end/views/category/byCat.hbs
+++ b/Back-end/views/category/byCat.hbs
@@ -97,7 +97,7 @@
 						</div>
 					</div>
 					<div class="product-body">
-						<p class="product-category">{{CatID}}</p>
+						<p class="product-category">{{CatName}}</p>
 						<p class="product-category">{{ProduName}}</p>
 						<h3 class="product-name"><a href="#">{{ProName}}</a></h3>
 						<h4 class="product-price">{{number_format Price}}  ₫<del class="product-old-price"></del></h4>
