--- a/Back-end/views/home/index.hbs
+++ b/Back-end/views/home/index.hbs
@@ -47,4 +47,196 @@
 			</div>
 		</div>
 {{/section}}
+
+{{#section 'title1'}}
+<!-- section title -->
+	<div class="col-md-12">
+		<div class="section-title">
+			<h3 class="title">SẢN PHẨM BÁN CHẠY NHẤT</h3>
+					
+		</div>
+	</div>
+<!-- /section title -->
+
+<!-- Products tab & slick -->
+<div class="col-md-12">
+	<div class="row">
+		<div class="products-tabs">
+			<!-- tab -->
+			<div id="tab1" class="tab-pane active">
+				<div class="products-slick" data-nav="#slick-nav-1">
+					<!-- product -->
+
+					<!-- Dell Vostro 3568 -->
+					<div class="product">
+						<a href="./detail/dell/dell vostro 3568.html">
+							<div class="product-img">
+								<img src="./img/banchay-1.jpg" alt="">
+								<div class="product-label">
+									<span class="new">NEW</span>
+								</div>
+							</div>
+							<div class="product-body">
+								<p class="product-category">DELL</p>
+								<h3 class="product-name">Laptop Dell Vostro 3568-VTI35037</h3>
+								<h4 class="product-price">11.090.000₫<del class="product-old-price">13.090.000₫</del></h4>
+								<div class="product-rating">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+								</div>
+								<div class="product-btns">
+									<button class="add-to-wishlist"><i class="far fa-heart"></i><span class="tooltipp">add to wishlist</span></button>
+
+									<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+								</div>
+							</div>
+							<div class="add-to-cart">
+								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+							</div>
+						</a>
+					</div>
+					<!-- /product -->
+
+					
+
+				</div>
+				<div id="slick-nav-1" class="products-slick-nav"></div>
+			</div>
+			<!-- /tab -->
+		</div>
+	</div>
+</div>
+<!-- Products tab & slick -->
+{{/section}}
+
+
+{{#section 'title2'}}
+<!-- section title -->
+	<div class="col-md-12">
+		<div class="section-title">
+			<h3 class="title">SẢN PHẨM MỚI NHẤT</h3>
+					
+		</div>
+	</div>
+<!-- /section title -->
+
+<!-- Products tab & slick -->
+<div class="col-md-12">
+	<div class="row">
+		<div class="products-tabs">
+			<!-- tab -->
+			<div id="tab1" class="tab-pane active">
+				<div class="products-slick" data-nav="#slick-nav-2">
+					<!-- product -->
+
+					<!-- Dell Vostro 3568 -->
+					<div class="product">
+						<a href="./detail/dell/dell vostro 3568.html">
+							<div class="product-img">
+								<img src="./img/banchay-1.jpg" alt="">
+								<div class="product-label">
+									<span class="new">NEW</span>
+								</div>
+							</div>
+							<div class="product-body">
+								<p class="product-category">DELL</p>
+								<h3 class="product-name">Laptop Dell Vostro 3568-VTI35037</h3>
+								<h4 class="product-price">11.090.000₫<del class="product-old-price">13.090.000₫</del></h4>
+								<div class="product-rating">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+								</div>
+								<div class="product-btns">
+									<button class="add-to-wishlist"><i class="far fa-heart"></i><span class="tooltipp">add to wishlist</span></button>
+
+									<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+								</div>
+							</div>
+							<div class="add-to-cart">
+								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+							</div>
+						</a>
+					</div>
+					<!-- /product -->
+
+					
+				</div>
+				<div id="slick-nav-2" class="products-slick-nav"></div>
+			</div>
+			<!-- /tab -->
+		</div>
+	</div>
+</div>
+<!-- Products tab & slick -->
+{{/section}}
+
+
+{{#section 'title3'}}
+<!-- section title -->
+	<div class="col-md-12">
+		<div class="section-title">
+			<h3 class="title">SẢN PHẨM ĐƯỢC XEM NHIỀU NHẤT</h3>
+					
+		</div>
+	</div>
+<!-- /section title -->
+
+<!-- Products tab & slick -->
+<div class="col-md-12">
+	<div class="row">
+		<div class="products-tabs">
+			<!-- tab -->
+			<div id="tab1" class="tab-pane active">
+				<div class="products-slick" data-nav="#slick-nav-3">
+					<!-- product -->
+
+					<!-- Dell Vostro 3568 -->
+					<div class="product">
+						<a href="./detail/dell/dell vostro 3568.html">
+							<div class="product-img">
+								<img src="./img/banchay-1.jpg" alt="">
+								<div class="product-label">
+									<span class="new">NEW</span>
+								</div>
+							</div>
+							<div class="product-body">
+								<p class="product-category">DELL</p>
+								<h3 class="product-name">Laptop Dell Vostro 3568-VTI35037</h3>
+								<h4 class="product-price">11.090.000₫<del class="product-old-price">13.090.000₫</del></h4>
+								<div class="product-rating">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+								</div>
+								<div class="product-btns">
+									<button class="add-to-wishlist"><i class="far fa-heart"></i><span class="tooltipp">add to wishlist</span></button>
+
+									<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+								</div>
+							</div>
+							<div class="add-to-cart">
+								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+							</div>
+						</a>
+					</div>
+					<!-- /product -->
+
+				</div>
+				<div id="slick-nav-3" class="products-slick-nav"></div>
+			</div>
+			<!-- /tab -->
+		</div>
+	</div>
+</div>
+<!-- Products tab & slick -->
+{{/section}}
+
 		
