--- a/Back-end/views/home/index.hbs
+++ b/Back-end/views/home/index.hbs
@@ -68,7 +68,7 @@
 						<!-- product -->
 						{{#each layoutbySale.bySale}}
 							<div class="product">
-								<a href="./detail/dell/dell vostro 3568.html">
+								<a href="#">
 									<div class="product-img">
 										<img src="/imgs/{{ProID}}/main.jpg" alt="">
 										<div class="product-label">
@@ -76,9 +76,9 @@
 										</div>
 									</div>
 									<div class="product-body">
-										<p class="product-category">DELL</p>
+										<p class="product-category">{{ProduName}}</p>
 										<h3 class="product-name">{{ProName}}</h3>
-										<h4 class="product-price">{{number_format Price}} ₫ <del class="product-old-price">13.090.000₫</del></h4>
+										<h4 class="product-price">{{number_format Price}} ₫ </h4>
 										<div class="product-rating">
 											<i class="fa fa-star"></i>
 											<i class="fa fa-star"></i>
@@ -127,41 +127,36 @@
 				<!-- tab -->
 				<div id="tab1" class="tab-pane active">
 					<div class="products-slick" data-nav="#slick-nav-2">
-						<!-- product -->
-
-						<!-- Dell Vostro 3568 -->
 						<div class="product">
-							<a href="./detail/dell/dell vostro 3568.html">
-								<div class="product-img">
-									<img src="./img/banchay-1.jpg" alt="">
-									<div class="product-label">
-										<span class="new">NEW</span>
+								<a href="#">
+									<div class="product-img">
+										<img src="/imgs/{{ProID}}/main.jpg" alt="">
+										<div class="product-label">
+											<span class="new">NEW</span>
+										</div>
 									</div>
-								</div>
-								<div class="product-body">
-									<p class="product-category">DELL</p>
-									<h3 class="product-name">Laptop Dell Vostro 3568-VTI35037</h3>
-									<h4 class="product-price">11.090.000₫<del class="product-old-price">13.090.000₫</del></h4>
-									<div class="product-rating">
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-									</div>
-									<div class="product-btns">
-										<button class="add-to-wishlist"><i class="far fa-heart"></i><span class="tooltipp">add to wishlist</span></button>
+									<div class="product-body">
+										<p class="product-category">{{ProduName}}</p>
+										<h3 class="product-name">{{ProName}}</h3>
+										<h4 class="product-price">{{number_format Price}} ₫ </h4>
+										<div class="product-rating">
+											<i class="fa fa-star"></i>
+											<i class="fa fa-star"></i>
+											<i class="fa fa-star"></i>
+											<i class="fa fa-star"></i>
+											<i class="fa fa-star"></i>
+										</div>
+										<div class="product-btns">
+											<button class="add-to-wishlist"><i class="far fa-heart"></i><span class="tooltipp">add to wishlist</span></button>
 
-										<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+											<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+										</div>
 									</div>
-								</div>
-								<div class="add-to-cart">
-									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
-								</div>
-							</a>
-						</div>
-						<!-- /product -->
-
+									<div class="add-to-cart">
+										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+									</div>
+								</a>
+							</div>
 						
 					</div>
 					<div id="slick-nav-2" class="products-slick-nav"></div>
@@ -194,7 +189,7 @@
 						<!-- product -->
 						{{#each layoutbyView.byView}}
 							<div class="product">
-								<a href="./detail/dell/dell vostro 3568.html">
+								<a href="#">
 									<div class="product-img">
 										<img src="/imgs/{{ProID}}/main.jpg" alt="">
 										<div class="product-label">
@@ -202,9 +197,9 @@
 										</div>
 									</div>
 									<div class="product-body">
-										<p class="product-category">DELL</p>
+										<p class="product-category">{{ProduName}}</p>
 										<h3 class="product-name">{{ProName}}</h3>
-										<h4 class="product-price">{{number_format Price}} ₫ <del class="product-old-price">13.090.000₫</del></h4>
+										<h4 class="product-price">{{number_format Price}} ₫ </h4>
 										<div class="product-rating">
 											<i class="fa fa-star"></i>
 											<i class="fa fa-star"></i>
