--- a/Back-end/views/_layouts/main.handlebars
+++ b/Back-end/views/_layouts/main.handlebars
@@ -209,6 +209,9 @@
 					
 				</div>
 				<!-- /row -->
+				<div class="row">
+					{{{body}}}
+				</div>
 			</div>
 			<!-- /container -->
 		</div>
