--- a/Back-end/views/product/detail.hbs
+++ b/Back-end/views/product/detail.hbs
@@ -1,5 +1,7 @@
 {{#section 'title'}}
-	{{{ProName}}}
+	{{#with product}}
+		{{ProName}}
+	{{/with}}
 {{/section}}
 {{#with product}}
 <!-- Product thumb imgs -->
