--- a/Back-end/views/category/byCat.hbs
+++ b/Back-end/views/category/byCat.hbs
@@ -1,5 +1,7 @@
 {{#section 'title'}}
-	sadsa
+	{{#with namecat}}
+		{{CatName}}
+	{{/with}}
 {{/section}}
 
 
@@ -32,7 +34,7 @@
 		<div class="checkbox-filter">
 			{{#each layoutVM.categories}}
 				<div class="input-checkbox">
-					<input type="checkbox"   id="checkk">
+					<input type="checkbox" checked=""  id="checkk">
 					<label for="brand-1">
 						<span></span>
 						<a href="/category/{{CatID}}" >{{CatName}}</a>
@@ -41,16 +43,7 @@
 					
 					
 				</div>
-				<script >
-					var i;
-					for (i = 1; i <= 4; i++) {
-					    if(i=={{CatID}})
-					    	{
-					    		document.getElementById("checkk").style.checked=true;
-					    	}
-					    
-					}
-				</script>
+				
 			{{/each}}
 		</div>
 	</div>
