--- a/Back-end/views/product/detail.hbs
+++ b/Back-end/views/product/detail.hbs
@@ -1,7 +1,5 @@
 {{#section 'title'}}
-	{{#with product}}
-		{{ProName}}
-	{{/with}}
+	{{{ProName}}}
 {{/section}}
 {{#with product}}
 <!-- Product thumb imgs -->
