--- a/Back-end/views/account/login.hbs
+++ b/Back-end/views/account/login.hbs
@@ -17,17 +17,10 @@
       <div class="left">
         <h1 class="h1">Sign in</h1>
         
-        <form class="form-horizontal" method="post" action="" id="frmLogin">  
-          <input type="text"  id="txtUsername" placeholder="Tên đăng nhập" name="username">
-          <input type="password"  id="txtPWD" placeholder="Password" name="rawPWD">                         
-          <label>
-              <input type="checkbox" name="remember">
-              Remember
-          </label>
-          <button type="submit" class="primary-btn order-submit">
-            Sign In
-          </button>      
-        </form>
+        <input type="text" name="username" placeholder="Username" />
+        <input type="password" name="rawPWD" placeholder="Password" />
+        
+        <a href="../AfterLog.html" class="primary-btn order-submit">Sign in</a>
       </div>
       
       <div class="rightsignup">
