--- a/Back-end/views/producer/byProducer.hbs
+++ b/Back-end/views/producer/byProducer.hbs
@@ -1,140 +1,150 @@
-{{#section 'title'}}
-	{{#with nameproducer}}
-		{{ProduName}}
-	{{/with}}
-{{/section}}
-
-
-{{#section 'nav'}}
+{{#section 'title'}} {{#with nameproducer}} {{ProduName}} {{/with}} {{/section}} {{#section 'nav'}}
 <!-- NAV -->
-<li class="active"><a href="#"><i class="fas fa-home"></i> Trang chủ</a></li>
-	
-	<li class="dropdown"><a href="#"><i class="fas fa-bars"></i> Xem theo loại sản phẩm</a>
-		<div class="dropdown-content">
-			{{#each layoutVM.categories}}
-			<a href="/category/{{CatID}}">{{CatName}}</a>			
-			{{/each}}
-		</div>
-	</li>
-	<li class="dropdown"><a href="#"><i class="fas fa-bars"></i> Xem theo nhà sản xuất</a>
-		<div class="dropdown-content">
-			{{#each layoutVM2.producers}}
-			<a href="/producer/{{ProduID}}">{{ProduName}}</a>
-			{{/each}}
-		</div>
-	</li>
+<li class="active">
+	<a href="#">
+		<i class="fas fa-home"></i> Trang chủ</a>
+</li>
+
+<li class="dropdown">
+	<a href="#">
+		<i class="fas fa-bars"></i> Xem theo loại sản phẩm</a>
+	<div class="dropdown-content">
+		{{#each layoutVM.categories}}
+		<a href="/category/{{CatID}}">{{CatName}}</a>
+		{{/each}}
+	</div>
+</li>
+<li class="dropdown">
+	<a href="#">
+		<i class="fas fa-bars"></i> Xem theo nhà sản xuất</a>
+	<div class="dropdown-content">
+		{{#each layoutVM2.producers}}
+		<a href="/producer/{{ProduID}}">{{ProduName}}</a>
+		{{/each}}
+	</div>
+</li>
 <!-- /NAV -->
-{{/section}}
-
-
-{{#section 'bodyleft'}}
+{{/section}} {{#section 'bodyleft'}}
 <!-- aside Widget -->
-	<div class="aside">
-		<h3 class="aside-title">Brand</h3>
-		<div class="checkbox-filter">
-			{{#each layoutVM2.producers}}
-				<div class="input-checkbox">
-					<input type="checkbox" checked=""  id="brand-1">
-					<label for="brand-1">
-						<span></span>
-						<a href="/producer/{{ProduID}}" >{{ProduName}}</a>
-						<small>(10)</small>
-					</label>
-				</div>
-			{{/each}}
+<div class="aside">
+	<h3 class="aside-title">Brand</h3>
+	<div class="checkbox-filter">
+		{{#each layoutVM2.producers}}
+		<div class="input-checkbox">
+			<input type="checkbox" checked="" id="brand-1">
+			<label for="brand-1">
+				<span></span>
+				<a href="/producer/{{ProduID}}">{{ProduName}}</a>
+				<small>(10)</small>
+			</label>
 		</div>
+		{{/each}}
 	</div>
+</div>
 <!-- /aside Widget -->
-{{/section}}
-
-{{#section 'bodyright'}}
+{{/section}} {{#section 'bodyright'}}
 <!-- store top filter -->
-	<div class="store-filter clearfix">
-		<div class="store-sort">
-			<label>
-				Sort By:
-				<select class="input-select">
-					<option value="0">Popular</option>
-					<option value="1">Position</option>
-				</select>
-			</label>
+<div class="store-filter clearfix">
+	<div class="store-sort">
+		<label>
+			Sort By:
+			<select class="input-select">
+				<option value="0">Popular</option>
+				<option value="1">Position</option>
+			</select>
+		</label>
 
-			<label>
-				Show:
-				<select class="input-select">
-					<option value="0">6</option>
-				</select>
-			</label>
-		</div>
-		<ul class="store-grid">
-			<li class="active"><i class="fa fa-th"></i></li>
-			<li><a href="#"><i class="fa fa-th-list"></i></a></li>
-		</ul>
+		<label>
+			Show:
+			<select class="input-select">
+				<option value="0">6</option>
+			</select>
+		</label>
 	</div>
+	<ul class="store-grid">
+		<li class="active">
+			<i class="fa fa-th"></i>
+		</li>
+		<li>
+			<a href="#">
+				<i class="fa fa-th-list"></i>
+			</a>
+		</li>
+	</ul>
+</div>
 <!-- /store top filter -->
 
 <!-- store products -->
 <div class="row">
 	{{#each products}}
-		<!-- product -->
-		<div class="col-md-4 col-xs-6">
-			<a href="#" target="blank">
-				<div class="product">
-					<div class="product-img">
-						<img src="/imgs/{{ProID}}/main.jpg" alt="">
-						<div class="product-label">
-							<span class="new">NEW</span>
-						</div>
-					</div>
-					<div class="product-body">
-						<p class="product-category">{{CatID}}</p>
-						<p class="product-category">{{ProduName}}</p>
-						<h3 class="product-name"><a href="#">{{ProName}}</a></h3>
-						<h4 class="product-price">{{number_format Price}} ₫<del class="product-old-price"></del></h4>
-						<div class="product-rating">
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-						</div>
-						
-					</div>
-					<div class="add-to-cart">
-						<a href="#">
-							<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
-						</a>
+	<!-- product -->
+	<div class="col-md-4 col-xs-6">
+		<a href="#" target="blank">
+			<div class="product">
+				<div class="product-img">
+					<img src="/imgs/{{ProID}}/main.jpg" alt="">
+					<div class="product-label">
+						<span class="new">NEW</span>
 					</div>
 				</div>
-			</a>	
-		</div>
-		<!-- /product -->
+				<div class="product-body">
+					<p class="product-category">{{CatID}}</p>
+					<p class="product-category">{{ProduName}}</p>
+					<h3 class="product-name">
+						<a href="#">{{ProName}}</a>
+					</h3>
+					<h4 class="product-price">{{number_format Price}} ₫
+						<del class="product-old-price"></del>
+					</h4>
+					<div class="product-rating">
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+					</div>
+
+				</div>
+				<div class="add-to-cart">
+					<a href="#">
+						<button class="add-to-cart-btn">
+							<i class="fa fa-shopping-cart"></i> add to cart</button>
+					</a>
+				</div>
+			</div>
+		</a>
+	</div>
+	<!-- /product -->
 	{{/each}}
 
-		<div class="clearfix visible-sm visible-xs"></div>
-	
+	<div class="clearfix visible-sm visible-xs"></div>
 
 
-		<!-- /store products -->
 
-<div class="row">
-	<div class="col-md-12 col-xs-12">
-		<div class="store-filter clearfix">
+	<!-- /store products -->
 
-			<ul class="store-pagination">
-			{{#each page_numbers}}
-			{{#if isCurPage}}
-				<li class="active"><a href="javascript:;">{{value}}</a></li>
-			{{else}}
-				<li><a href="?page={{value}}">{{value}}</a></li>
-			{{/if}}
-			{{/each}}
+	<div class="row">
+		<div class="col-md-12 col-xs-12">
+			<div class="store-filter clearfix">
 
-				<li><a href="#"><i class="fa fa-angle-right"></i></a></li>
-			</ul>
+				<ul class="store-pagination">
+					{{#each page_numbers}} {{#if isCurPage}}
+					<li class="active">
+						<a href="javascript:;">{{value}}</a>
+					</li>
+					{{else}}
+					<li>
+						<a href="?page={{value}}">{{value}}</a>
+					</li>
+					{{/if}} {{/each}}
+
+					<li>
+						<a href="#">
+							<i class="fa fa-angle-right"></i>
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
-</div>
-{{/section}}
-
-			
+	{{/section}}
