--- a/Back-end/views/_layouts/main.handlebars
+++ b/Back-end/views/_layouts/main.handlebars
@@ -179,7 +179,7 @@
 		<!-- end of carousel --> 
 
 		<!-- SECTION -->
-		<div class="section">
+		<div class="section" style="margin-top:0px; padding-top:0px">
 			<!-- container -->
 			<div class="container">
 				<!-- row -->
