--- a/Back-end/views/producer/byProducer.hbs
+++ b/Back-end/views/producer/byProducer.hbs
@@ -1,4 +1,5 @@
-{{#section 'title'}} {{#with nameproducer}} {{ProduName}} {{/with}} {{/section}} {{#section 'nav'}}
+{{#section 'title'}} {{#with nameproducer}} {{ProduName}} {{/with}} {{/section}}
+{{#section 'nav'}}
 <!-- NAV -->
 <li class="active">
 	<a href="#">
@@ -24,7 +25,8 @@
 	</div>
 </li>
 <!-- /NAV -->
-{{/section}} {{#section 'bodyleft'}}
+{{/section}} 
+{{#section 'bodyleft'}}
 <!-- aside Widget -->
 <div class="aside">
 	<h3 class="aside-title">Brand</h3>
