--- a/Back-end/views/producer/byProducer.hbs
+++ b/Back-end/views/producer/byProducer.hbs
@@ -1,12 +1,9 @@
-<<<<<<< HEAD
+
 {{#section 'title'}}
-	Ds sp
+	{{nameProdu.ProduName}}
 {{/section}}
 
 
-=======
-{{#section 'title'}} {{#with nameproducer}} {{ProduName}} {{/with}} {{/section}}
->>>>>>> 5128e0df78d66e0f2cc9d8e132a98ea2ceed41c5
 {{#section 'nav'}}
 <!-- NAV -->
 <li class="active">
