--- a/Back-end/views/account/register.hbs
+++ b/Back-end/views/account/register.hbs
@@ -1,5 +1,5 @@
 {{#section 'title'}}
-	Đăng ký
+  Đăng ký
 {{/section}}
 
 {{#section 'css'}}
@@ -7,29 +7,29 @@
 {{/section}}
 
 {{#section 'js'}}
-	<script src="/assets/css/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
+  <script src="/assets/css/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
   <script src="https://www.google.com/recaptcha/api.js"></script>
 
-	<script type="text/javascript">
-		$('#txtDOB').datepicker({
-			format: 'd/m/yyyy',
-			autoclose: true
-		});
+  <script type="text/javascript">
+    $('#txtDOB').datepicker({
+      format: 'd/m/yyyy',
+      autoclose: true
+    });
 
-		var validate = function() {
-		    if ($('#txtUsername').val().length === 0) {
-		        alert('Error');
-		        return false;
-		    }
+    var validate = function() {
+        if ($('#txtUsername').val().length === 0) {
+            alert('Error');
+            return false;
+        }
 
-		    if ($('#txtPWD').val() !== $('#txtCPWD').val()) {
-		        alert('not match');
-		        return false;
-		    }
+        if ($('#txtPWD').val() !== $('#txtCPWD').val()) {
+            alert('not match');
+            return false;
+        }
 
-		    return true;
-		}
-	</script>
+        return true;
+    }
+  </script>
 {{/section}}
 
 
@@ -39,17 +39,27 @@
           <div class="left">
             <h1 class="h1">Sign up</h1>
             
-            <input type="text" id="txtUsername" name="username" placeholder="Username" />          
-            <input type="password" id="txtPWD" name="rawPWD" placeholder="Password" />
-            <input type="password" id="txtCPWD" name="cPWD" placeholder="Retype password" />
-            <input type="text" name="email" placeholder="E-mail" />
-            <input type="text" name="name" placeholder="Full Name" />
-            <input type="text" class="form-control" id="txtDOB" placeholder="Date of Birth" name="dob"> 
-            <form>
+             <form action="" method="POST"  role="form" onsubmit="return validate();">
+             
+                        <input type="text"  id="txtUsername" placeholder="Tên đăng nhập" name="username">
+                    
+                        <input type="password"  id="txtPWD" placeholder="Password" name="rawPWD">
+                    
+                        <input type="password"  id="txtCPWD" placeholder="Nhập lại password" name="cPWD">
+                 
+                        <input type="text"  id="txtName" placeholder="Họ tên" name="name">
+                 
+                        <input type="text"  id="txtEmail" placeholder="Email" name="email">
+              
+                        <input type="text"  id="txtDOB" placeholder="d/m/yyyy" name="dob">
+                <form>
                 <div class="g-recaptcha" data-sitekey="6LfPNVUUAAAAAGKNsEeXiuT2O_r_W73iMQ2Baw6p"></div>
+                </form>
+                  <button type="submit" class="primary-btn order-submit">
+                    Đăng ký
+                  </button>
+               
             </form>
-            
-            <a href="#" class="primary-btn order-submit">Sign up</a>
           </div>
           
           <div class="rightsignup">
