Trang admin, tiếp tục update sau

--- a/Back-end/views/_layouts/main.handlebars
+++ b/Back-end/views/_layouts/main.handlebars
@@ -119,16 +119,6 @@
 						<!-- ACCOUNT -->
 						<div class="col-md-3 clearfix">
 							<div class="header-ctn">
-								<!-- Wishlist -->
-								<div>
-									<a href="#">
-										<i class="far fa-heart"></i>
-										<span>Yêu thích</span>
-										<div class="qty">0</div>
-									</a>
-								</div>
-								<!-- /Wishlist -->
-
 								<!-- Cart -->
 								<div class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
@@ -275,7 +265,7 @@
 									<li><a href="#">Tài khoản của tôi</a></li>
 									<li><a href="#">Xem giỏ hàng</a></li>
 									<li><a href="#">Về đầu trang</a></li>
-									<li><a href="#">Đến trang hệ thống</a></li>
+									<li><a href="/admin">Đến trang hệ thống</a></li>
 								</ul>
 							</div>
 						</div>
