--- a/Back-end/views/producer/byProducer.hbs
+++ b/Back-end/views/producer/byProducer.hbs
@@ -89,9 +89,6 @@
 			<div class="product">
 				<div class="product-img">
 					<img src="/imgs/{{ProID}}/main.jpg" alt="">
-					<div class="product-label">
-						<span class="new"></span>
-					</div>
 				</div>
 				<div class="product-body">
 					<p class="product-category">{{CatID}}</p>
@@ -107,7 +104,7 @@
 				<div class="add-to-cart">
 					<a href="#">
 						<button class="add-to-cart-btn">
-							<i class="fa fa-shopping-cart"></i> add to cart</button>
+							<i class="fa fa-shopping-cart"></i>THÊM VÀO GIỎ</button>
 					</a>
 				</div>
 			</div>
