--- a/Back-end/views/account/register.hbs
+++ b/Back-end/views/account/register.hbs
@@ -39,27 +39,29 @@
           <div class="left">
             <h1 class="h1">Sign up</h1>
             
-             <form action="" method="POST"  role="form" onsubmit="return validate();">
-             
-                        <input type="text"  id="txtUsername" placeholder="Tên đăng nhập" name="username">
-                    
-                        <input type="password"  id="txtPWD" placeholder="Password" name="rawPWD">
-                    
-                        <input type="password"  id="txtCPWD" placeholder="Nhập lại password" name="cPWD">
-                 
-                        <input type="text"  id="txtName" placeholder="Họ tên" name="name">
-                 
-                        <input type="text"  id="txtEmail" placeholder="Email" name="email">
+             <form action="" method="POST" class="form-horizontal" role="form" onsubmit="return validate();">
               
+                        <input type="text" id="txtUsername" placeholder="Tên đăng nhập" name="username">
+                   
+                        <input type="password"  id="txtPWD" placeholder="Password" name="rawPWD">
+                   
+                        <input type="password"  id="txtCPWD" placeholder="Nhập lại password" name="cPWD">
+                    
+                        <input type="text"  id="txtName" placeholder="Họ tên" name="name">
+                    
+                        <input type="text"  id="txtEmail" placeholder="Email" name="email">
+                    
                         <input type="text"  id="txtDOB" placeholder="d/m/yyyy" name="dob">
-                <form>
-                <div class="g-recaptcha" data-sitekey="6LfPNVUUAAAAAGKNsEeXiuT2O_r_W73iMQ2Baw6p"></div>
-                </form>
+                    
+                    
                   <button type="submit" class="primary-btn order-submit">
                     Đăng ký
                   </button>
-               
+                
+          
             </form>
+               
+          
           </div>
           
           <div class="rightsignup">
