--- a/Back-end/views/admin/byCatAdmin.hbs
+++ b/Back-end/views/admin/byCatAdmin.hbs
@@ -2,7 +2,7 @@
 	Loại sản phẩm
 {{/section}}
 {{#section 'css'}}
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="/imgs/Logo.png" type="image/png" sizes="8x8">
     <title>Admin</title>
     <meta name="description" content="Sufee Admin - HTML5 Admin Template">
@@ -40,15 +40,14 @@
 					<li class="dropdown"><a href="/admin/byCatAdmin"><i class="menu-icon fa fa-book"></i> Loại sản phẩm</a>
 						<li>
 							{{#each layoutVM.categories}}
-							<a href="/admin/byCatAdmin/{{CatID}}">{{CatName}}</a>			
+							     <a href="/admin/byCatAdmin/{{CatID}}">{{CatName}}</a>			
 							{{/each}}
 						</li>
-						
 					</li>
-					<li class="dropdown"><a href="#"><i class="menu-icon fa fa-book"></i> Nhà sản xuất</a>
+					<li class="dropdown"><a href="/admin/byProduAdmin"><i class="menu-icon fa fa-book"></i> Nhà sản xuất</a>
 						<li>
 							{{#each layoutVM2.producers}}
-							<a href="/producer/{{ProduID}}">{{ProduName}}</a>
+							     <a href="/admin/byProduAdmin/{{ProduID}}">{{ProduName}}</a>
 							{{/each}}
 						</li>
 					</li>
@@ -65,39 +64,43 @@
 		<div class="col-lg-12">
             <div class="header-menu">            
                 <div class="form-group row">
-                	 <label for="example-search-input" class="col-2 col-form-label">Tìm kiếm</label>
-          			<div class="col-10">
-            	  <input class="form-control" type="search" id="example-search-input">
-          	</div>
-    </div> 
-    <div style="margin-top:50px">
-        <table class="table" >
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">STT</th>
-          <th scope="col">Mã sản phẩm</th>
-          <th scope="col">Tên sản phẩm</th>
-          <th scope="col">Số lượng</th>
-          <th scope="col">Giá bán</th>
-        </tr>
-      </thead>
-      <tbody>
-        {{#each loadAllByCatAdmin}}
-          <tr>
-            <div><th scope="row" id="id">1</th></div>
-            <script>
-                var id = $("#id");
-                id.html( parseInt(id.html()) + 1 );
-            </script>
-            <td>{{ProID}}</td>
-            <td>{{ProName}}</td>
-            <td>{{Sales}}</td>
-            <td>{{Price}}</td>
-          </tr>
-        {{/each}}
-        
-      </tbody>
-    </table>
-    </div>
+                	<label for="example-search-input" class="col-2 col-form-label">Tìm kiếm</label>
+          		    <div class="col-10">
+            	       <input class="form-control" type="search" id="example-search-input">
+          	        </div>
+                </div> 
+            </div>
+        </div>
+        <div class="col-lg-12">
+            <div style="margin-top:50px">
+                <table class="table" >
+                      <thead class="thead-dark">
+                        <tr>
+                          <th scope="col">STT</th>
+                          <th scope="col">Mã sản phẩm</th>
+                          <th scope="col">Tên sản phẩm</th>
+                          <th scope="col">Số lượng</th>
+                          <th scope="col">Giá bán</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {{#each loadAllByCatAdmin}}
+                          <tr>
+                            <div><th scope="row" id="id">1</th></div>
+                            <script>
+                                var id = $("#id");
+                                id.html( parseInt(id.html()) + 1 );
+                            </script>
+                            <td>{{ProID}}</td>
+                            <td>{{ProName}}</td>
+                            <td>{{Sales}}</td>
+                            <td>{{Price}}</td>
+                          </tr>
+                        {{/each}}
+                        
+                      </tbody>
+                </table>
+            </div>
+        </div>
         
 	{{/section}}
