--- a/Back-end/views/_layouts/main.handlebars
+++ b/Back-end/views/_layouts/main.handlebars
@@ -92,8 +92,8 @@
 						<!-- SEARCH BAR -->
 						<div class="col-md-6">
 							<div class="header-search">
-								<form method="POST" action="/search/action" name="option">
-									<select class="input-select">
+								<form method="POST" action="/search/action" >
+									<select class="input-select" name="option">
 										<option value="0">Tên sản phẩm</option>
 										<option value="1">Loại sản phẩm</option>
 										<option value="2">Nhà sản xuất</option>
