--- a/Back-end/views/category/byCat.hbs
+++ b/Back-end/views/category/byCat.hbs
@@ -4,6 +4,16 @@
 	
 {{/section}}
 
+{{#section 'js'}}
+	<script type="text/javascript">
+		$('.addItem').on('click', function() {
+		    var id = $(this).data('proid');
+		    $('#txtP').val(id);
+		    $('#txtQ').val(1);
+		    $('#frmAddItem').submit();
+		});
+	</script>
+{{/section}}
 
 {{#section 'nav'}}
 <!-- NAV -->
@@ -65,11 +75,14 @@
 						<h3 class="product-name">{{ProName}}</h3>
 						<h4 class="product-price">{{number_format Price}}  ₫</h4>	
 					</div>
-					<div class="add-to-cart">
-						<a href="#">
-							<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i>THÊM VÀO GIỎ</button>
-						</a>
-					</div>
+					{{#if ../layoutVM.isLogged}}
+						<div class="add-to-cart">
+							<a data-proid="{{ProID}}" href="javascript:;" class=" addItem">
+								<button class="add-to-cart-btn">
+									<i class="fa fa-shopping-cart"></i>THÊM VÀO GIỎ</button>
+							</a>
+						</div>
+					{{/if}}
 				</div>
 			</a>	
 		</div>
