--- a/Back-end/views/product/detail.hbs
+++ b/Back-end/views/product/detail.hbs
@@ -34,9 +34,9 @@
 <!-- /NAV -->
 {{/section}} <!-- Product thumb imgs -->
 
-
-{{#with product}}
-<!-- BREADCRUMB -->
+{{#section 'breadcrumb'}}
+	{{#with product}}
+		<!-- BREADCRUMB -->
 		<div id="breadcrumb" class="section" style="margin-top:0px">
 			<!-- container -->
 			<div class="container">
@@ -55,81 +55,84 @@
 			<!-- /container -->
 		</div>
 		<!-- /BREADCRUMB -->	
-{{/with}}
+	{{/with}}
+{{/section}}
 
 {{#with product}}
+	<div class="col-lg-2  ">
+		<div id="product-imgs">
+			<div class="product-preview">
+				<img src="/imgs/{{ProID}}/thumb1.jpg" />
+			</div>
 
-
-<div class="col-lg-2  ">
-	<div id="product-imgs">
-		<div class="product-preview">
-			<img src="/imgs/{{ProID}}/thumb1.jpg" />
-		</div>
-
-		<div class="product-preview">
-			<img src="/imgs/{{ProID}}/thumb2.jpg" />
-		</div>
-		<div class="product-preview">
-			<img src="/imgs/{{ProID}}/thumb1.jpg" />
-		</div>
-		<div class="product-preview">
-			<img src="/imgs/{{ProID}}/thumb3.jpg" />
-		</div>
-	</div>
-</div>
-<div class="col-lg-5 ">
-	<div id="product-main-img">
-		<div class="product-preview">
-			<img src="/imgs/{{ProID}}/main1.jpg" />
-		</div>
-		<div class="product-preview">
-			<img src="/imgs/{{ProID}}/main2.jpg" />
-		</div>
-		<div class="product-preview">
-			<img src="/imgs/{{ProID}}/main1.jpg" />
-		</div>
-		<div class="product-preview">
-			<img src="/imgs/{{ProID}}/main3.jpg" />
-		</div>
-	</div>
-</div>
-<!-- /Product main img -->
-<div class="col-lg-5">
-	<div class="product-details">
-		<h2 class="product-name">{{ProName}}</h2>
-		<p>Lượt xem :{{number_format Views}} | Lượt bán :{{number_format Sales}}</p>
-		<p>Tồn kho: {{Quantity}}</p>
-		<h3 class="product-price">{{number_format Price}}</h3>
-		<span class="product-available">Còn hàng</span>
-	</div>
-	{{{Des}}}
-	<div class="add-to-cart">
-		<div class="qty-label">
-			Số lượng
-			<div class="input-number">
-				<input type="number">
-				<span class="qty-up">+</span>
-				<span class="qty-down">-</span>
+			<div class="product-preview">
+				<img src="/imgs/{{ProID}}/thumb2.jpg" />
+			</div>
+			<div class="product-preview">
+				<img src="/imgs/{{ProID}}/thumb1.jpg" />
+			</div>
+			<div class="product-preview">
+				<img src="/imgs/{{ProID}}/thumb3.jpg" />
 			</div>
 		</div>
-		<a href="../../user/cart.html">
-			<button class="add-to-cart-btn">
-				<i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button>
-		</a>
 	</div>
-	<ul class="product-links">
-		<li>Danh mục:</li>
-		<li>
-			<a href="/category/{{CatID}}">{{CatName}}</a>
-		</li>
-		<li>
-			<a href="/producer/{{ProduID}}">{{ProduName}}</a>
-		</li>
-	</ul>
-</div>
-</div>
-<!-- /Product details -->
-<!-- /product tab -->
+	<div class="col-lg-5 ">
+		<div id="product-main-img">
+			<div class="product-preview">
+				<img src="/imgs/{{ProID}}/main1.jpg" />
+			</div>
+			<div class="product-preview">
+				<img src="/imgs/{{ProID}}/main2.jpg" />
+			</div>
+			<div class="product-preview">
+				<img src="/imgs/{{ProID}}/main1.jpg" />
+			</div>
+			<div class="product-preview">
+				<img src="/imgs/{{ProID}}/main3.jpg" />
+			</div>
+		</div>
+	</div>
+	<!-- /Product main img -->
+	<div class="col-lg-5">
+		<div class="product-details">
+			<h2 class="product-name">{{ProName}}</h2>
+			<p>Lượt xem :{{number_format Views}} | Lượt bán :{{number_format Sales}}</p>
+			<p>Tồn kho: {{Quantity}}</p>
+			<h3 class="product-price">{{number_format Price}}</h3>
+			<span class="product-available">Còn hàng</span>
+		
+			{{{Des}}}
+			
+			{{#if ../layoutVM.isLogged}}
+			<form class="form-horizontal" id="frmAddItem" method="post" action="/account/cart/add">
+				<div class="add-to-cart">
+					<div class="qty-label">
+						Số lượng
+						<div class="input-number">
+							<input type="hidden" name="proId"  value="{{../product.ProID}}">
+			                <input name="quantity" type="number" class="input-number"  value="1">
+							<span class="qty-up">+</span>
+							<span class="qty-down">-</span>
+						</div>
+					</div>
+					<a><button type="submit" class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i>THÊM VÀO GIỎ</button></a>
+				</div>
+			</form>
+			{{/if}}
+			
+			<ul class="product-links">
+				<li>Danh mục:</li>
+				<li>
+					<a href="/category/{{CatID}}">{{CatName}}</a>
+				</li>
+				<li>
+					<a href="/producer/{{ProduID}}">{{ProduName}}</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<!-- /Product details -->
+	<!-- /product tab -->
 {{/with}}
 <!--Product same producer -->
 <!-- Section -->
