nghiên cứu + var trongg payRepo là xong

--- a/Back-end/views/account/pay.hbs
+++ b/Back-end/views/account/pay.hbs
@@ -88,6 +88,8 @@
           <div><strong>TỔNG CỘNG</strong></div>
           <div><strong class="order-total">55.890.000₫</strong></div>
         </div>
+        
+        
 
       </div>
     </div>
@@ -103,10 +105,8 @@
     
     
     <form action="" method="POST" class="form-horizontal" role="form" onsubmit="return validate();">
-            <label for="txtUsername" class="col-md-3 ">Họ tên</label>        
-            <input type="text"  id="txtName" placeholder="Nguyễn Văn A" name="namereq">
           <label for="txtUsername" class="col-sm-3 ">Điện thoại di động</label>  
-            <input type="text"  id="txtPhone" placeholder="0164XXXXXXX" name="email">
+            <input type="text"  id="txtPhone" placeholder="0164XXXXXXX" name="phone">
       <label for="txtUsername" class="col-sm-3 ">Địa chỉ</label>  
             <input type="text"  id="txtAddress" placeholder="Hồ Chí Minh" name="address">
             
