--- a/Back-end/views/admin/byProduAdmin.hbs
+++ b/Back-end/views/admin/byProduAdmin.hbs
@@ -33,22 +33,22 @@
             <div id="main-menu" class="main-menu collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href="index.html"> <i class="menu-icon fa fa-dashboard"></i>Dashboard </a>
+                        <a href="/home"> <i class="menu-icon fa fa-dashboard"></i>Dashboard </a>
                     </li>
                     <h3 class="menu-title">Quản lý sản phẩm</h3><!-- /.menu-title -->
           
-					<li class="dropdown"><a href="/admin/byCatAdmin"><i class="menu-icon fa fa-book"></i> Loại sản phẩm</a>
+					<li class="dropdown"><a href="/byCatAdmin"><i class="menu-icon fa fa-book"></i> Loại sản phẩm</a>
 						<li>
 							{{#each layoutVM.categories}}
-							<a href="/admin/byCatAdmin/{{CatID}}">{{CatName}}</a>			
+							<a href="/byCatAdmin/{{CatID}}">{{CatName}}</a>			
 							{{/each}}
 						</li>
 						
 					</li>
-					<li class="dropdown"><a href="/admin/byProduAdmin"><i class="menu-icon fa fa-book"></i> Nhà sản xuất</a>
+					<li class="dropdown"><a href="/byProduAdmin"><i class="menu-icon fa fa-book"></i> Nhà sản xuất</a>
 						<li>
 							{{#each layoutVM2.producers}}
-							<a href="/admin/byProduAdmin/{{ProduID}}">{{ProduName}}</a>
+							<a href="/byProduAdmin/{{ProduID}}">{{ProduName}}</a>
 							{{/each}}
 						</li>
 					</li>
